# RealtimeCallSemanticAnal

./: .gitignore  ARCHITECTURE_DIAGRAMS.md  FYP_COMPLETION_README.md  PIPELINE.md  Prj.txt  README.md  RUN.md  analyze_pyannote_output.py  check_mongo.py  guide.txt  logs.txt  proj.txt  pyproject.toml  requirements.txt  run_diarization_with_llm.py  run_llm_diarization.py  run_llm_first_diarization.py  setup.py  summary.txt  transcribe_audio.py  transcription_output.txt
Document/: ARCHITECTURE_DIAGRAMS.md  BACKEND_ANALYSIS_AND_RUN_GUIDE.md  BACKEND_FRONTEND_SETUP.md  CODEBASE_ANALYSIS.md  COMPLETE_SYSTEM_FLOW.md  DEMO_RUN_CHECKLIST_AND_MODEL_TRAINING.md  Draft.md  EMOTION_MAPPING_JUSTIFICATION.md  EMOTION_MODEL_TRAINING_GUIDE_MARCH_2026.md  FYP_COMPLETION_README.md  FYP_DOCUMENT_ALIGNMENT.md  Finalized.docx 10-49-44-364.docx  MODERN_UI_DESIGN_GUIDE.md  ProjectChap.md  ProjectProp.md  Project_Proposal_(2)[1].docx 10-49-48-725.docx  QUICK_START.md  REORGANIZATION_SUMMARY.md  REPORT.md  SALE_PREDICTOR_MODEL_TRAINING_GUIDE_MARCH_2026.md  UV_PACKAGE_MANAGER.md  proj.txt
backend/: CONFIGURATION.md  README.md  WARNINGS_FIX.md  config.py  db_connection.py  env_template.txt  presentation_demo.py  pyproject.toml  requirements.txt  run_demo.py  run_diarization_only.py  run_full_analysis.py  run_web_app.py  setup.py  test_backend.py
backend/docs/: BACKEND_ANALYSIS_AND_RUN_GUIDE.md  COMPLETE_SYSTEM_FLOW.md  DESIGN_DECISIONS.md  FYP_DOCUMENT_ALIGNMENT.md
backend/scripts/: README_TRAINING.md  analyze_pyannote_output.py  best_train_emotion_model.py  generate_5min_diarization_test.py  generate_sale_training_dataset.py  test_training_pipeline.py  train_emotion_model.py  train_sale_predictor.py  transcribe_audio.py  validate_production_readiness.py  validate_trained_models.py
backend/src/call_analysis/: __init__.py  dashboard.py  demo.py  feature_extraction.py  models.py  web_app.py  (+4 more)
backend/tests/: test_feature_extraction.py  test_integration.py  test_models.py
data/: mock_sale_training.csv
data/dataset_stats/: conversion_by_channel.csv  conversion_by_month.csv  conversion_by_segment.csv  dataset_statistics.json  validation_report.json
frontend/: package-lock.json  package.json  tailwind.config.js
(+24 files in other folders)
